--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,18 @@
         pointer-events-none;
     }
 
+    .dropdown-content {
+        @apply absolute w-auto min-w-fit p-2
+        rounded-md shadow-lg bg-primary;
+    }
+
+    .list-content {
+        @apply px-2 py-1 rounded-md w-full
+        hover:text-accent-1 hover:bg-accent-2
+        transition-all ease-in-out
+        cursor-pointer;
+    }
+
     .hyperlink {
         @apply hover:text-accent-1
         transition-all ease-linear;
