--- a/src/app.css
+++ b/src/app.css
@@ -57,16 +57,16 @@ li a:hover {
 }
 
 p {
-	font-size: 1.25rem;
+	font-size: 1.1rem;
 
-	@media (max-width: 640px) {
-		font-size: 1.1rem;
+	@media (min-width: 640px) {
+		font-size: 1.25rem;
 	}
 }
 
 .info-section {
 	height: 100%;
-	padding: 8rem 2rem; 
+	padding: 6rem 2rem; 
 	overflow: hidden;
 }
 
